WIP :: 1.See More 2.Swipper in library 3. MOOLYA-2597 FIX ::Image display in Investor portfolio

--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -2376,3 +2376,7 @@ li.sameWorkTime:after {
   display: none !important;
 }
 }
+.stop_slide{
+  transition-duration: 0ms !important;
+  transform: inherit !important;
+}
