--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -1128,7 +1128,7 @@ textarea.comment-input-box{border: 2px solid #ddd; border-radius: 4px; margin-bo
 .upload-image .fa.fa-trash-o{position:absolute;right:-6px;top:-6px;color:#fff;background:#ef4647;width:25px;height:25px;text-align:center;line-height:25px;border-radius:50%;cursor:pointer;z-index: 9;}
 .upload-image img{width:100%;height: 100%;}
 
-.see-more a{color:#fff;font-size:12px;cursor:pointer;text-decoration:none;background:#273545;padding:4px 6px;border-radius:4px;text-shadow:none;font-weight: normal;}
+.see-more{color:#fff;font-size:12px;cursor:pointer;text-decoration:none;background:#273545;padding:4px 6px;margin: -4px 0 0 10px; border-radius:4px;text-shadow:none;font-weight: normal;}
 .library-wrap .thumbnail{float:left;width:120px;height:120px;margin:4px 10px 4px 4px;position:relative;padding:0;}
 .library-wrap .thumbnail .thumbnail_new_actions{margin: 0px;padding: 0px;}
 .library-wrap .thumbnail .thumbnail_new_actions li{display: block;}
@@ -1651,3 +1651,5 @@ margin: 0px;
   border-color: transparent transparent transparent #EF4647;
   top: 0px;
 }
+.wrap-show {display: none !important;}
+
