Microsite:StartUp display changes done

--- a/private/microSite/views/about.pug
+++ b/private/microSite/views/about.pug
@@ -126,6 +126,17 @@ html(prefix='og: http://ogp.me/ns#')
                     img(src='/images/branches_banner.png')
               else
                 h2 Private Content
+            .pageTechnology
+              if(!privateFields.technologies)
+                if(technologies && technologies.length > 0)
+                  include management
+                  +portFolioSlides(technologies)
+                else
+                  .ms_noBranches
+                    img(src='/images/branches_banner.png')
+              else
+                h2 Private Content
+
             .pageTeam
               if(!privateFields.teamManagement)
                 if(teamManagement && teamManagement.length > 0)
@@ -211,6 +222,15 @@ html(prefix='og: http://ogp.me/ns#')
                 else
                   .ms_noBranches
                    img(src='/images/branches_banner.png')
+            .pageServicesProducts
+              if(!privateFields.servicesProducts)
+                if(servicesProducts && servicesProducts.length > 0 )
+                  p
+                    | !{servicesProducts}
+
+                else
+                  .ms_noBranches
+                    img(src='/images/branches_banner.png')
 
             .pageCSR
               if(!privateFields.policy)
