Microsite: Portlios display done except keywords

--- a/private/microSite/views/about.pug
+++ b/private/microSite/views/about.pug
@@ -37,6 +37,7 @@ html(prefix='og: http://ogp.me/ns#')
     link(href='/css/ms_styles.css', type='text/css', media='all', rel='stylesheet')
     link(href='/css/font-awesome.css', type='text/css', media='all', rel='stylesheet')
     link(href='/css/swiper.min.css', type='text/css', media='all', rel='stylesheet')
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
   body
     include analytics
     script.
