--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -928,6 +928,9 @@ h3{font-size:40px; text-shadow:none;font-weight: bold;}
 .modal-open .modal {
   background: rgba(75, 75, 75, 0.82);
 }
+.show_title {
+  .modal-title{display:block !important;}
+}
   .modal-header{padding: 5px;
     background: #ddd;
     font-size: 20px;
@@ -936,6 +939,7 @@ h3{font-size:40px; text-shadow:none;font-weight: bold;}
     border-bottom: 1px solid #c6c6c6;
     display:block;
     .modal-title{display:none}
+
     .close{background: $mlRed; border: 0px; line-height: 27px; position: absolute; text-decoration: none; font-size: 14px; height: 30px; width: 15px; color: $mlWhite;text-shadow: none;text-align: center;opacity:1;right: -1px; z-index: 99;top: -12px;
       span{display: block; margin-top: -4px; font-size: 20px;}
     &:after{position:absolute;right:-10px;content:" ";width: 0px;height: 0px;border-style: solid;border-width: 15px 0 15px 10px;border-color: transparent transparent transparent $mlRed;top: 0px;}
