Added Keywords Content to keywords tab

--- a/private/microSite/views/about.pug
+++ b/private/microSite/views/about.pug
@@ -310,6 +310,10 @@ html(prefix='og: http://ogp.me/ns#')
                     img(src='/images/branches_banner.png')
               else
                 h2 Private Content
+            .pageKeywords
+              span
+                | !{displayKeywords}
+
 
       .footer
         p
