--- a/private/microSite/views/about.pug
+++ b/private/microSite/views/about.pug
@@ -223,7 +223,7 @@ html(prefix='og: http://ogp.me/ns#')
                   img(src='/images/branches_banner.png')
 
             .pageIncubatorSectors
-              if(!privateFields.sectorsAndServices)
+              if(!isSectorsAndServicesPrivate)
                 if(sectorsAndServices && sectorsAndServices.length > 0 )
                   p
                     | !{sectorsAndServices}
@@ -231,6 +231,9 @@ html(prefix='og: http://ogp.me/ns#')
                 else
                   .ms_noBranches
                     img(src='/images/branches_banner.png')
+              else
+                h2 Private Content
+
             .pageServicesProducts
               if(!privateFields.servicesProducts)
                 if(servicesProducts && servicesProducts.length > 0 )
@@ -300,7 +303,7 @@ html(prefix='og: http://ogp.me/ns#')
               else
                 h2 Private Content
             .pageAboutDiscription
-              if(!privateFields.aboutDiscription)
+              if(!aboutDiscriptionPrivate)
                 if(aboutDiscription && aboutDiscription.length > 0 )
                   p
                     | !{aboutDiscription}
