Microsite: Add keywords and making content private

--- a/private/microSite/views/about.pug
+++ b/private/microSite/views/about.pug
@@ -263,8 +263,9 @@ html(prefix='og: http://ogp.me/ns#')
                 else
                   .ms_noBranches
                     img(src='/images/branches_banner.png')
+
             .pageIPandTM
-              if(!privateFields.IPandTM)
+              if(!isIntellectualPrivate)
                 if(IPandTM && IPandTM.length > 0 )
                   p
                     | !{IPandTM}
@@ -272,8 +273,12 @@ html(prefix='og: http://ogp.me/ns#')
                 else
                   .ms_noBranches
                     img(src='/images/branches_banner.png')
+              else
+                h2 Private Content
+
+
             .pageProblemsandSolutions
-              if(!privateFields.problemStatement)
+              if(!isProblemPrivate)
                 if(problemStatement && problemStatement.length > 0 )
                   p
                     | Problem: !{problemStatement}
@@ -283,6 +288,10 @@ html(prefix='og: http://ogp.me/ns#')
                 else
                   .ms_noBranches
                     img(src='/images/branches_banner.png')
+              else
+                h2 Private Content
+
+
 
             .pageAwards
               if(!privateFields.awardsDescription)
@@ -314,8 +323,10 @@ html(prefix='og: http://ogp.me/ns#')
               else
                 h2 Private Content
             .pageKeywords
-              span
-                | !{displayKeywords}
+              if(displayKeywords && displayKeywords.length >0)
+                each keyword , i in displayKeywords
+                  span
+                    | #{keyword.trim()}
 
 
       .footer
