--- a/private/microSite/views/about.pug
+++ b/private/microSite/views/about.pug
@@ -142,10 +142,11 @@ html(prefix='og: http://ogp.me/ns#')
             span.m_red lya
             |  from #{chapterName}, #{clusterName}
           ul.ms_menu
-            each list, i in listView
+            if(listView && listView.length >0)
+              each list, i in listView
+                li
+                  a.ms_btn_ye(href='#' + list.name onclick='something("' + list.className + '",this)') #{list.name}
               li
-                a.ms_btn_ye(href='#' + list.name onclick='something("' + list.className + '",this)') #{list.name}
-            li
         .clear
         .ms_content.mCustomScrollbar(data-mcs-theme='minimal-dark')
           .pages
@@ -235,7 +236,7 @@ html(prefix='og: http://ogp.me/ns#')
                 h2 Private Content
 
             .pageServicesProducts
-              if(!privateFields.servicesProducts)
+              if(!isServicesProductsDescriptionPrivate)
                 if(servicesProducts && servicesProducts.length > 0 )
                   p
                     | !{servicesProducts}
@@ -243,9 +244,11 @@ html(prefix='og: http://ogp.me/ns#')
                 else
                   .ms_noBranches
                     img(src='/images/branches_banner.png')
+              else
+                h2 Private Content
 
             .pageCSR
-              if(!privateFields.policy)
+              if(!isPolicyDescriptionPrivate)
                 if(policy && policy.length > 0 )
                   p
                     | !{policy}
@@ -253,9 +256,11 @@ html(prefix='og: http://ogp.me/ns#')
                 else
                   .ms_noBranches
                     img(src='/images/branches_banner.png')
+              else
+                h2 Private Content
 
             .pageServices
-              if(!privateFields.servicesDescription)
+              if(!isServicesPrivate)
                 if(servicesDescription && servicesDescription.length > 0 )
                   p
                     | !{servicesDescription}
@@ -263,6 +268,8 @@ html(prefix='og: http://ogp.me/ns#')
                 else
                   .ms_noBranches
                     img(src='/images/branches_banner.png')
+              else
+                h2 Private Content
 
             .pageIPandTM
               if(!isIntellectualPrivate)
@@ -291,14 +298,6 @@ html(prefix='og: http://ogp.me/ns#')
               else
                 h2 Private Content
 
-
-
-            .pageAwards
-              if(!privateFields.awardsDescription)
-                p
-                  include awards
-              else
-                h2 Private Content
             .pageLookingFor
               if(!lookingForDescriptionPrivate)
                 include looking_for
