--- a/client/stylesheets/css/moolya_app.css
+++ b/client/stylesheets/css/moolya_app.css
@@ -259,14 +259,14 @@ h1{
   cursor: pointer;
 }
  .progress-circle{ 
-  background-color: #ddd; 
-  border-radius: 50%; 
-  display: inline-block; 
-  height: 44px; 
-  position: relative; 
-  width: 44px; 
-  left: -22px; 
-  top: 6px;
+background-color: #ddd;
+  border-radius: 50%;
+  display: inline-block;
+  height: 44px;
+  position: fixed;
+  width: 44px;
+  right: 8px;
+  top: 6px;
 }
 
 
