--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -2441,3 +2441,14 @@ li.sameWorkTime:after {
 .details-panel dt:after {
   content: ':';
 }
+.full_progress{
+  background: #000; width: 100%; height: 100%; position: fixed; text-align: center;
+  .progress{
+    width: 30%; margin: 20% 0 0 35%;height: 10px;
+    span{
+      color: #FFF; position: absolute; margin-top: 10px;
+    }
+  }
+}
+
+
